--- a/nimbus3d/src/AccountPage.css
+++ b/nimbus3d/src/AccountPage.css
@@ -54,7 +54,14 @@
 .user-buttons{
     margin-top: 0 !important;
     padding-top: 0 !important;
+    padding-bottom: 1rem;
 }
+
+.user-buttons span{
+    color: black !important;
+    border: blue 2x solid;
+}
+
 
 .user-name h1{
     margin-bottom: 0;
@@ -106,3 +113,9 @@
     padding-top: 0 !important;
     font-size: 2rem;
 }
+
+@media only screen and (max-width: 800px) {
+    .user-notification{
+        display: none;
+    }
+  }
