--- a/nimbus3d/src/CategoryCard.css
+++ b/nimbus3d/src/CategoryCard.css
@@ -1,12 +1,12 @@
 .category-card{
     min-width: 25rem;
-    min-height: 19rem;
+    min-height: 15rem;
     max-width: 25rem;
     max-height: 25rem;
     margin: 2rem;
     border-radius: 1rem !important;
     border: 2px black solid;
-    padding: 0.3rem;
+    /* padding: 0.3rem; */
     position: relative;
 }
 
@@ -19,5 +19,8 @@
     left: 0;
     width: 100%;
     height: 3rem;
-    color: black;
+    color: white;
+    -webkit-text-stroke: 0.2px black;
+    border-bottom-left-radius: 1rem !important;
+    border-bottom-right-radius: 1rem !important;
 }
